2013-03-18  Holger Seelig  <holger.seelig@yahoo.de>

	* TouchSensor.wrl: 

2013-03-17  Holger Seelig  <holger.seelig@yahoo.de>

	* Library.mdproj:
	* Toon.wrl:
	* Phong.wrl:
	* Water2.wrl:
	* Beethoven.wrl:
	* TouchSensor.wrl:
	* lostvalley_up.png:
	* ComposedCubeMapTexture.wrl: 

2013-03-16  Holger Seelig  <holger.seelig@yahoo.de>

	* Library.mdproj:
	* Water2.wrl:
	* lostvalley_up.png:
	* lostvalley_east.png:
	* lostvalley_down.png:
	* TextureCoordinateGenerator.wrl:
	* lostvalley_west.png:
	* lostvalley_south.png:
	* lostvalley_north.png:
	* TextureCoordinateGenerator.wrl:
	* lostvalley_up.png:
	* lostvalley_down.png:
	* lostvalley_east.png:
	* ComposedCubeMapTexture.wrl:
	* lostvalley_west.png:
	* lostvalley_south.png:
	* lostvalley_north.png: 

2013-03-15  Holger Seelig  <holger.seelig@yahoo.de>

	* Test.wrl: 

2013-03-15  Holger Seelig  <holger.seelig@yahoo.de>

	* Library.mdproj:
	* TriangleSet.wrl: 

2013-03-15  Holger Seelig  <holger.seelig@yahoo.de>

	* Library.mdproj:
	* LineSet.wrl: 

2013-03-15  Holger Seelig  <holger.seelig@yahoo.de>

	* Library.mdproj:
	* gift.wrl:
	* Box.wrl:
	* shamrock.wrl:
	* Beethoven.wrl:
	* spongetri4.wrl:
	* Test.wrl:
	* image1.png:
	* Phong.wrl:
	* SFBool.wrl:
	* Water1.wrl:
	* Water2.wrl:
	* gift.wrl:
	* Lambert.wrl:
	* shamrock.wrl:
	* Beethoven.wrl:
	* QuadSet.wrl:
	* spongetri4.wrl:
	* Collision.wrl:
	* ComposedShader.wrl:
	* ComposedShader.wrl:
	* TwoSidedMaterial.wrl:
	* IndexedFaced.wrl:
	* IndexedFaced2.wrl:
	* SFTime.wrl:
	* SFNode.wrl:
	* IndexedFaceSet.wrl:
	* IndexedFaced16.wrl:
	* SFBool.wrl:
	* MFTime.wrl:
	* MFNode.wrl:
	* MFBool.wrl:
	* IndexedFaceSet2.wrl:
	* IndexedFaced.wrl.gz:
	* MFVec3f.wrl:
	* MFVec4f.wrl:
	* SFVec4f.wrl:
	* IndexedFaceSet16.wrl:
	* MFVec4d.wrl:
	* MFImage.wrl:
	* MFFloat.wrl:
	* MFColor.wrl:
	* MFInt32.wrl:
	* MFVec3d.wrl:
	* MFVec2f.wrl:
	* MFVec2d.wrl:
	* SFVec2f.wrl:
	* SFColor.wrl:
	* SFInt32.wrl:
	* SFVec2d.wrl:
	* SFVec3d.wrl:
	* SFImage.wrl:
	* SFVec4d.wrl:
	* SFVec3f.wrl: