@@ -1,3 +1,7 @@
+2013-03-18  Holger Seelig  <holger.seelig@yahoo.de>
+
+	* Line3.h: 
+
 2013-03-10  Holger Seelig  <holger.seelig@yahoo.de>
 
 	* libtitania-standard.cproj:
