@@ -2,6 +2,10 @@
 
 	* TouchSensor.wrl: 
 
+2013-03-18  Holger Seelig  <holger.seelig@yahoo.de>
+
+	* TouchSensor.wrl: 
+
 2013-03-17  Holger Seelig  <holger.seelig@yahoo.de>
 
 	* Library.mdproj:
